<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DetailProductActivity">

    <FrameLayout
        android:id="@+id/fr_detail_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignBottom="@id/fr_detail_product"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="108dp"
            android:layout_height="34dp"
            android:id="@+id/btn_save_product"
            android:background="@drawable/bg_button1"
            android:text="@string/save_product"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="108dp"
            android:layout_height="34dp"
            android:id="@+id/btn_comment"
            android:layout_marginLeft="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/comment"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="118dp"
            android:layout_height="34dp"
            android:id="@+id/btn_add_cart"
            android:layout_marginLeft="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/add_to_cart"/>
    </LinearLayout>
</RelativeLayout>