<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/linear_layout"
        android:background="@drawable/bg_test">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imb_back_order"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:background="@drawable/baseline_arrow_back_ios_black_18dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginTop="62dp"
        android:layout_above="@id/linear_l">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_name_order"
                android:text="Username"
                android:textSize="16sp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="28dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_email_order"
                android:text="Email"
                android:textSize="16sp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="28dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_order"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_phone_order"
                android:text="Số điện thoại"
                android:textSize="16sp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="28dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_order"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_detail_order"
                android:text="Chi tiết đơn hàng"
                android:textSize="16sp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="28dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_total_price"
                android:text="Chi tiết đơn hàng"
                android:textSize="16sp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="28dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_address_order"
                android:hint="Địa chỉ"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="28dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_l"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_checkout_order"
            android:layout_width="278dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="11dp"
            android:background="@drawable/login_button_bk"
            android:text="Thanh toán khi nhận hàng"
            tools:ignore="TouchTargetSizeCheck" />
        <Button
            android:id="@+id/btn_checkout_order_zalopay"
            android:layout_width="278dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="11dp"
            android:background="@drawable/login_button_bk"
            android:text="@string/zalo_pay"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>