<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:elevation="6dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:id="@+id/imv_image_news"
                android:elevation="12dp"
                app:cardElevation="14dp"
                app:cardCornerRadius="14dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imv_image_news1_favorite"
                    android:src="@drawable/news_phone"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:id="@+id/txt_title_news_favorite"
                android:text="@string/title_item"
                android:layout_toLeftOf="@id/imv_image_news"
                android:layout_marginRight="14dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:id="@+id/txt_content_item_favorite"
                android:text="@string/content_item"
                android:layout_toLeftOf="@id/imv_image_news"
                android:layout_below="@id/txt_title_news_favorite"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="14dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_time_item_favorite"
                android:text="@string/time_news"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="4dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>