<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewsFragment"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/bg_item_cart"
        android:id="@+id/rlt_top">

        <ImageView
            android:id="@+id/imv_back_news"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="9.8dp"
            android:background="@drawable/baseline_arrow_back_ios_black_18dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_title"
            android:text="@string/news"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/imv_back_news"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"/>

        <ImageView
            android:id="@+id/imv_add_post_new"
            android:layout_width="31.4dp"
            android:layout_height="31.4dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="9.8dp"
            android:layout_marginRight="8.9dp"
            android:background="@drawable/icon_post1" />

    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:id="@+id/cv_news"
        android:layout_marginTop="18dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:elevation="12dp"
        app:cardElevation="14dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/news_phone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_top_title"
                android:text="@string/title_news"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="32dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_news"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginLeft="12dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rcv_news"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="64dp"/>

</LinearLayout>