<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="112.8dp"
        android:layout_margin="6dp"
        android:elevation="6dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112.8dp"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:id="@+id/txt_name_list_order"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Tên người mua"
                    android:textColor="@color/black"
                    android:textSize="14.9sp" />

                <TextView
                    android:id="@+id/txt_email_list_order"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="14.9sp" />

                <TextView
                    android:id="@+id/txt_detail_list_order"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2.8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="
- Tên sản phẩm: OPPO Reno8 T 5G (8GB - 128GB)
- Số lượng: 1

- Tên sản phẩm: Laptop Lenovo Ideapad Gaming 3 15ARH7
- Số lượng: 2
"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/total_money"
                    android:textColor="@color/black"
                    android:textSize="14.9sp" />

                <TextView
                    android:id="@+id/txt_total_money_list_order"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/status1"
                    android:textColor="@color/black"
                    android:textSize="14.9sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_status_list_order"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/status"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>